<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bkgd"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:padding="5dip"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout

        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:weightSum="1">

        <Button
            android:background="@color/background2"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/log_in"
            android:textColor="@color/textOnBtn_bk"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:background="@color/background2"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/background1"
            android:layout_marginBottom="50dp"
            android:textSize="30sp"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/get_started"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/textOnBtn_bk"
            android:textColor="@color/textOnBtn_w"
            android:text="@string/get_started"/>

        <Button
            android:id="@+id/get_airtime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textOnBtn"
            android:text="@string/get_airtime"/>
        <Button
            android:id="@+id/get_atms"
            android:layout_width="fill_parent"
            android:background="@color/textOnBtn_bk"
            android:textColor="@color/textOnBtn_w"
            android:layout_height="wrap_content"
            android:text="@string/get_atms"/>
        <Button
            android:id="@+id/about_kwarapay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textOnBtn"
            android:text="@string/about_kwarapay" />
    </LinearLayout>

</LinearLayout>