<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgd"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="23dp"
        android:textColor="@color/background2"
        android:text="@string/aboutchoice_title" />

    <Button
        android:textColor="@color/textOnBtn"
        android:id="@+id/abt_kwp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15"
        android:textSize="18dp"
        android:text="@string/aboutkwpchoice"
        android:layout_marginTop="40dp"/>
    <Gallery
        android:id="@+id/gallery1"
        android:layout_width="385dp"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/img_view"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        app:srcCompat="@drawable/flagnaija" />

    <Button
        android:textColor="@color/textOnBtn"
        android:id="@+id/cont_dev"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:text="@string/cnt_dev"
        />

    <TextView
        android:id="@+id/editText15"
        android:textSize="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:ems="10"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/color_naija"
        android:text="@string/long_live" />
</LinearLayout>